# game-of-life

./: CMakeLists.txt  readme.txt
include/: cellBoard.hpp
src/: cellBoard.cpp  main.cpp
